--- a/trivia.html
+++ b/trivia.html
@@ -44,6 +44,7 @@
       </div>
       <div id="gif" class=" gifsize gpmarginBottom col-md-12 gpmarginBottom">
       </div>
+      <!-- <a href="trivia.html"><button class="blink button" type="button" id="restartGame">Restart Game</button></a> -->
     </div>
   </div>
 
