Added new features and corrected the timer

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   </div>
   <div class="row ">
     <div id="timer" class="   col-md-3 col-sm-12 col-xs-12 border text-center timer gppadding gpbg1">
+      <div id="clock" text-center timer gppadding gpbg1"></div>
     </div>
     <div id="question" class="col-md-7  col-sm-12 col-xs-12 text-center border gifSize gppadding question gpbg1">
       <div id="gif"></div>
@@ -41,6 +42,7 @@
       <p class="instructionText">Well you've come to the right place, "Welcome to Gabe's Trivia Game." The game is simple, simply choose one of the games below you'd like to play. When the timer starts you have 25 seconds to answer as many of the questions you can.</p>
       <p class="instructionText">See, simple right! Well what are you waiting for! Good Luck</p>
       <button class='btn btn-primary blink' id='startBtn'>Enter</button>
+
     </div>
   </div>
   <div class="row">
